tests/pass/STARA.java
package pass;

public class STARA {
    public int starassign(int x, int y){
        return x *= y;

    }
    
}
