tests/fail/STARA.java
package fail;

public class STARA {
    public int starassign(int x, int y){
        return x *= "a";

    }
}
